--- a/codigo/GestionHotelera/Views/Cliente/VerCuentaCliente.cshtml
+++ b/codigo/GestionHotelera/Views/Cliente/VerCuentaCliente.cshtml
@@ -64,7 +64,7 @@
             }
         </ul> *@
         <div class="caja-seccion">
-            @* <h3>Teléfonos</h3> *@
+            <h3>Telefonos</h3>
             <ul class="lista-telefonos">
                 @foreach (var tel in Model.ListaTelefonos)
                 {
