--- a/codigo/GestionHotelera/Views/EmpresaHospedaje/Menu.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaHospedaje/Menu.cshtml
@@ -39,6 +39,13 @@
         <div style="margin-bottom: 20px;">
         <a href="/Cliente/Menu" style="background-color: #6c757d; color: white; padding: 8px 14px; border-radius: 6px; text-decoration: none;">← Volver a inicio</a>
         </div> 
+
+
+        <header style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 30px;">
+            <h1 style="color: #2c3e50; font-size: 28px;">@Model.DatosEmpresa.NombreHotel <span style="color: #27ae60; font-size: 20px;">@Model.DatosEmpresa.NombreTipoHotel</span></h1>
+
+        </header>
+
     }
 
 
