--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/EditarActividad.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/EditarActividad.cshtml
@@ -6,7 +6,7 @@
 <div style="max-width: 800px; margin: auto; padding: 40px; background-color: #f9f9f9; border-radius: 10px; font-family: 'Segoe UI', sans-serif; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
 
     <!-- Botón de regreso -->
-    <a href="/EmpresaRecreacion/Menu" style="text-decoration: none; color: #333; font-weight: bold; display: inline-block; margin-bottom: 20px;">← Atrás</a>
+    <a href="/EmpresaRecreacion/Menu?idEmpresa=no" style="text-decoration: none; color: #333; font-weight: bold; display: inline-block; margin-bottom: 20px;">← Atrás</a>
 
     <h2 style="color: #2c3e50; text-align: center;">Modificar Actividad</h2>
 
@@ -23,7 +23,7 @@
 
         <div style="text-align: center; display: flex; justify-content: center; gap: 20px;">
             <button type="submit" style="background-color: #4CAF50; color: white; padding: 10px 20px; font-weight: bold; border: none; border-radius: 5px;">Guardar</button>
-            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #a94442; color: white; padding: 10px 20px; font-weight: bold; text-decoration: none; border-radius: 5px;">Cancelar</a>
+            <a href="/EmpresaRecreacion/Menu?idEmpresa=no" style="background-color: #a94442; color: white; padding: 10px 20px; font-weight: bold; text-decoration: none; border-radius: 5px;">Cancelar</a>
         </div>
     </form>
 </div>
