--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/NuevoServicio.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/NuevoServicio.cshtml
@@ -53,7 +53,7 @@
 
         <div style="margin-top: 30px; display: flex; gap: 20px;">
             <button type="submit" style="padding: 12px 25px; background-color: #388e3c; color: white; font-weight: bold; border: none; border-radius: 6px;">Guardar</button>
-            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="padding: 12px 25px; background-color: #c62828; color: white; font-weight: bold; border: none; border-radius: 6px; text-decoration: none;">Cancelar</a>
+            <a href="/EmpresaRecreacion/Menu?idEmpresa=no" style="padding: 12px 25px; background-color: #c62828; color: white; font-weight: bold; border: none; border-radius: 6px; text-decoration: none;">Cancelar</a>
         </div>
     
     
@@ -87,18 +87,5 @@
         }
 </style>
 
-@* @section Scripts {
-    <script>
-        function toggleCheck(id) {
-            const checkbox = document.getElementById(id);
-            checkbox.checked = !checkbox.checked;
-            checkbox.parentElement.classList.toggle("checked", checkbox.checked);
-        }
 
-        function guardarServicio() {
-            alert("✅ Servicio registrado con éxito.");
-            window.location.href = "/EmpresaRecreacion/Menu";
-        }
-    </script>
-} *@
 <script src="~/js/RegistrarServicioEmpresaRecreacionScript.js"></script>
