--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/EditarPerfil.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/EditarPerfil.cshtml
@@ -5,7 +5,7 @@
 
 <div style="max-width: 900px; margin: auto; background-color: #e7f0ee; padding: 30px; border-radius: 12px; font-family: 'Segoe UI', sans-serif;">
     <!-- Botón regresar -->
-    <a href="/EmpresaRecreacion/Menu" style="text-decoration: none; color: #333; font-weight: bold; display: inline-block; margin-bottom: 20px;">← Atrás</a>
+    <a href="/EmpresaRecreacion/Menu?idEmpresa=no" style="text-decoration: none; color: #333; font-weight: bold; display: inline-block; margin-bottom: 20px;">← Atrás</a>
 
     <h2 style="text-align: center; margin-bottom: 25px; color: #1e4d4d;">Modificar registros para una empresa de recreación</h2>
 
@@ -86,8 +86,8 @@
 
     <!-- Botones de acción -->
     <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
-        <button onclick="guardarCambios()" style="background-color: #2c7a3f; color: white; padding: 10px 20px; border: none; border-radius: 6px; font-weight: bold;">Guardar cambios</button>
-        <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="background-color: #b54a30; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: bold;">Cancelar</a>
+        <button  style="background-color: #2c7a3f; color: white; padding: 10px 20px; border: none; border-radius: 6px; font-weight: bold;">Guardar cambios</button>
+        <a href="/EmpresaRecreacion/Menu?idEmpresa=no" style="background-color: #b54a30; color: white; padding: 10px 20px; border-radius: 6px; text-decoration: none; font-weight: bold;">Cancelar</a>
     </div>
 </div>
 
@@ -95,7 +95,7 @@
     <script>
         function guardarCambios() {
             alert("Cambios guardados exitosamente.");
-            window.location.href = "/EmpresaHospedaje/Menu?idEmpresa=no";
+            window.location.href = "/EmpresaRecreacion/Menu?idEmpresa=no";
         }
     </script>
 }
