--- a/codigo/GestionHotelera/Views/EmpresaRecreacion/NuevaActividad.cshtml
+++ b/codigo/GestionHotelera/Views/EmpresaRecreacion/NuevaActividad.cshtml
@@ -21,7 +21,7 @@
 
             <button type="submit" style="padding: 12px 25px; background-color: #388e3c; color: white; font-weight: bold; border: none; border-radius: 6px; transition: background-color 0.2s ease;">Guardar</button>
 
-            <a href="/EmpresaHospedaje/Menu?idEmpresa=no" style="padding: 12px 25px; background-color: #b71c1c; color: white; font-weight: bold; border-radius: 6px; text-decoration: none;">Cancelar</a>
+            <a href="/EmpresaRecreacion/Menu?idEmpresa=no" style="padding: 12px 25px; background-color: #b71c1c; color: white; font-weight: bold; border-radius: 6px; text-decoration: none;">Cancelar</a>
         </div>
 
     </form>
